--- a/GE.WebAdmin/Views/SiteTests/Edit.cshtml
+++ b/GE.WebAdmin/Views/SiteTests/Edit.cshtml
@@ -6,30 +6,7 @@
 
 @section styles{
     <link href="~/content/dist/css/lightbox.min.css" rel="stylesheet" />
-    <style type="text/css">
-        #grid-test-subjects tbody > tr > td:last-child {
-            width: 70px;
-            vertical-align: middle;
-            text-align: center;
-        }
-
-        #matrix {
-            overflow: hidden;
-            max-height: 100%;
-            overflow-x: auto;
-            margin-top: 15px;
-        }
-
-            #matrix td:not(.matrix__first-column) {
-                text-align: center;
-                vertical-align: middle;
-                cursor: pointer;
-            }
-
-                #matrix td:not(.matrix__first-column):active {
-                    background-color: #DFF0D8;
-                }
-    </style>
+    <link href="~/content/dist/css/test-matrix.min.css" rel="stylesheet" />
 }
 
 <h2>@ViewBag.Title</h2>
@@ -50,9 +27,16 @@
 
 <ul class="nav nav-tabs" role="tablist">
     <li role="presentation" class="active"><a href="#general" aria-controls="general" role="tab" data-toggle="tab">Основные параметры</a></li>
-    <li role="presentation"><a href="#subjects" aria-controls="subjects" role="tab" data-toggle="tab">Объекты теста</a></li>
-    <li role="presentation"><a href="#questions" aria-controls="questions" role="tab" data-toggle="tab">Вопросы теста</a></li>
-    <li role="presentation"><a href="#matrix" aria-controls="matrix" role="tab" data-toggle="tab">Матрица ответов</a></li>
+    @if (!isNew)
+    {
+        <li role="presentation"><a href="#subjects" aria-controls="subjects" role="tab" data-toggle="tab">Объекты теста</a></li>
+        <li role="presentation"><a href="#questions" aria-controls="questions" role="tab" data-toggle="tab">Вопросы теста</a></li>
+        <li role="presentation"><a href="#matrix" aria-controls="matrix" role="tab" data-toggle="tab">Матрица ответов</a></li>
+    }
+    else
+    {
+        <li role="presentation"><a href="#load" aria-controls="load" role="tab" data-toggle="tab">Загрузить из файла</a></li>
+    }
 </ul>
 
 <div class="tab-content">
@@ -81,12 +65,12 @@
 
             @if (!isNew && User.IsInRole("architect"))
             {
-                <div class="form-group">
-                    @Html.LabelFor(x => x.TitleUrl, new { @class = "control-label" })
-                    <span class="text-info"> (применяется для уникальной идентификации материала)</span>
-                    @Html.EditorFor(x => x.TitleUrl, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(x => x.TitleUrl)
-                </div>
+            <div class="form-group">
+                @Html.LabelFor(x => x.TitleUrl, new { @class = "control-label" })
+                <span class="text-info"> (применяется для уникальной идентификации материала)</span>
+                @Html.EditorFor(x => x.TitleUrl, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(x => x.TitleUrl)
+            </div>
             }
 
             <div class="form-group">
@@ -118,23 +102,42 @@
             </div>
         </form>
     </div>
-    <div role="tabpanel" class="tab-pane" id="subjects">
-        <br />
-        <div id="grid-test-subjects">
+    @if (!isNew)
+    {
+        <div role="tabpanel" class="tab-pane" id="subjects">
+            <br />
+            <div id="grid-test-subjects">
 
+            </div>
         </div>
-    </div>
-    <div role="tabpanel" class="tab-pane" id="questions">
-        <br />
-        <div id="grid-test-questions">
+        <div role="tabpanel" class="tab-pane" id="questions">
+            <br />
+            <div id="grid-test-questions">
 
+            </div>
         </div>
-    </div>
-    <div role="tabpanel" class="tab-pane" id="matrix">
-        <div id="matrix">
+        <div role="tabpanel" class="tab-pane" id="matrix">
+            <div id="matrix">
 
+            </div>
         </div>
-    </div>
+    }
+    else
+    {
+        <div role="tabpanel" class="tab-pane" id="load">
+            <br />
+            <div class="input-group">
+                <input type="text" class="form-control" name="test-file-input" placeholder="Выберите файл">
+                <form method="post" action="@Url.Action("LoadFromFile", "SiteTests")" autocomplete="off" enctype="multipart/form-data">
+                    <input type="file" class="hidden" name="file" />
+                    @Html.AntiForgeryToken()
+                </form>
+                <span class="input-group-btn">
+                    <button class="btn btn-default" type="button" onclick="$('input[name=test-file-input]').trigger('focus');">Выбрать</button>
+                </span>
+            </div>
+        </div>
+    }
 </div>
 
 <div class="modal fade" id="test-modal" tabindex="-1" role="dialog">
@@ -166,35 +169,68 @@
             }
             CKEDITOR.replace('Description', { height: 400 });
 
+            $('input[name="test-file-input"]').focus(function(){
+                $input=$(this);
+                $file=$('input[type="file"]');
+                $file.trigger('click');
+            });
+
+            $('input[type="file"]').change(function(){
+                var file=this.files[0];
+                var name=file.name;
+                $('input[name="test-file-input"]').val(name);
+                $(this).closest('form').submit();
+            });
+
             $('a[href="#questions"]').on('shown.bs.tab', function (e) {
+                $a=$(this);
                 $.ajax({
                     method: 'post',
                     url: '/sitetestquestions?testId='+@Model.Id,
+                    beforeSend:function(){
+                        $('<i class="fa fa-spinner fa-spin"></i>').prependTo($a);
+                    },
                     success:function(result){
                         $('#grid-test-questions').html(result);
+                    },
+                    complete:function(){
+                        $a.find('i').remove();
                     }
                 });
             })
 
             $('a[href="#subjects"]').on('shown.bs.tab', function (e) {
+                $a=$(this);
                 $.ajax({
                     method: 'post',
                     url: '/sitetestsubjects?testId='+@Model.Id,
+                    beforeSend:function(){
+                        $('<i class="fa fa-spinner fa-spin"></i>').prependTo($a);
+                    },
                     success:function(result){
                         $('#grid-test-subjects').html(result);
+                    },
+                    complete:function(){
+                        $a.find('i').remove();
                     }
                 });
             })
 
             $('a[href="#matrix"]').on('shown.bs.tab', function (e) {
+                $a=$(this);
                 $.ajax({
                     method: 'get',
                     url: '/sitetests/testmatrix?testId='+@Model.Id,
+                    beforeSend:function(){
+                        $('<i class="fa fa-spinner fa-spin"></i>').prependTo($a);
+                    },
                     success:function(result){
                         $('#matrix').html(result);
                     },
                     complete:function(){
+                        $a.find('i').remove();
                         $('#matrix td:not(.matrix__first-column):contains(1)').addClass('success');
+                        $('[data-toggle="tooltip"]').tooltip({container:'body'});
                     }
                 });
             })
@@ -318,6 +354,35 @@
                             $td.removeClass('success');
                     }
                 });
+            });
+
+            $('#matrix').on('click','.sx-pager a', function(){
+                var href=$(this).attr('href');
+                $spinner=$('.p-spinner');
+                $.ajax({
+                    method:'get',
+                    url:href,
+                    beforeSend:function(){
+                        $spinner.show();
+                    },
+                    success:function(result){
+                        $('#matrix').html(result);
+                    },
+                    complete:function(){
+                        $spinner.hide();
+                        $('#matrix td:not(.matrix__first-column):contains(1)').addClass('success');
+                        $('[data-toggle="tooltip"]').tooltip({container:'body'});
+                    }
+                });
+
+                return false;
+            });
+
+            $('#matrix').on('click', '.matrix__first-column',function(){
+                var css='warning';
+                $tr=$(this).closest('tr');
+                $('.matrix__first-column').closest('tr').removeClass(css);
+                $tr.addClass(css);
             });
         });
     </script>
