--- a/GE.WebUI/Views/SiteTests/List.cshtml
+++ b/GE.WebUI/Views/SiteTests/List.cshtml
@@ -12,6 +12,8 @@
     <link href="~/content/dist/css/test-list.min.css" rel="stylesheet" />
 }
 
+@Html.Partial("_Breadcrumbs", (VMBreadcrumb[])ViewBag.Breadcrumbs)
+
 <div class="test-list">
     @if (Model.Collection.Any())
     {
