--- a/GE.WebUI/Views/SiteTests/Details.cshtml
+++ b/GE.WebUI/Views/SiteTests/Details.cshtml
@@ -1,15 +1,17 @@
 ﻿@model SxVMSiteTestQuestion
 @{
-    ViewBag.Title = Model.Block != null && Model.Block.Test != null ? Model.Block.Test.Title : "Страница прохождения теста";
+    ViewBag.Title = Model.Test != null ? Model.Test.Title : "Страница прохождения теста";
     ViewBag.H1 = ViewBag.H1 ?? ViewBag.Title;
-    ViewBag.Description = ViewBag.Description ?? Model.Block != null && Model.Block.Test != null ? Model.Block.Test.Description : "Страница прохождения теста";
+    ViewBag.Description = ViewBag.Description ?? Model.Test != null ? Model.Test.Description : "Страница прохождения теста";
     ViewBag.Keywords = ViewBag.Keywords ?? "Игровые тесты, тесты для игр";
 }
 
-@if (Model.Block != null && Model.Block.Test != null)
+@Html.Partial("_Breadcrumbs", (VMBreadcrumb[])ViewBag.Breadcrumbs)
+
+@if (Model.Test != null)
 {
     <div id="st-page">
-        @Html.Partial("~/Views/SiteTests/_Step.cshtml", Model)
+        @Html.Partial("_Step", Model)
     </div>
 
     @section scripts{
@@ -19,14 +21,13 @@
             $(function () {
                 $('#st-page').on('click', '.sx-indicator > span', function () {
                     $span = $(this);
-                    var text = $span.closest('li').find('.sx-indicator-txt').text();
+                    var id = $span.closest('li').find('.sx-indicator-txt').attr('data-id');
                     var isCorrect = $span.data('dir') == true;
 
                     $form = $span.closest('form');
-                    var count = $form.find('input[type="hidden"][class="pastQT"]').length;
-                    $form.append('<input type="hidden" class="pastQT" name="[' + count + '].Order" value="' + (count + 1) + '" />');
-                    $form.append('<input type="hidden" name="[' + count + '].Question.Text" value="' + text + '" />');
-                    $form.append('<input type="hidden" name="[' + count + '].Question.IsCorrect" value="' + isCorrect + '" />');
+                    $input = $form.find('input[data-q-id="' + id + '"]')
+                    $input.val(isCorrect);
+
                     $form.submit();
                 });
             });
