--- a/GE.WebUI/Views/SiteTests/_Step.cshtml
+++ b/GE.WebUI/Views/SiteTests/_Step.cshtml
@@ -1,33 +1,44 @@
-﻿@model SxVMSiteTestQuestion
+﻿@model SxVMSiteTestAnswer
 @{
     Layout = null;
     var oldSteps = (SxVMSiteTestStep[])ViewBag.OldSteps;
     SxVMSiteTestStep step;
 }
 
-@using (Ajax.BeginForm("Step", "SiteTests", new AjaxOptions { HttpMethod = "post", UpdateTargetId = "st-page" }))
+@if (ViewBag.SubjectsCount == null || ViewBag.SubjectsCount > 1)
 {
-    <p>
-        @Model.Test.Description
-    </p>
-
-    @Html.AntiForgeryToken()
-    <input type="hidden" name="testId" value="@Model.Test.Id" />
-
-    <div class="q">
-        @for (int i = 0; i < oldSteps.Length; i++)
-        {
-            step = oldSteps[i];
-            <input type="hidden" name="[@i].QuestionId" value="@step.QuestionId" />
-            <input type="hidden" name="[@i].IsCorrect" data-q-id="@step.QuestionId" value="@step.IsCorrect.ToString().ToLower()" />
-        }
-    </div>
-
-    @Html.SxIndicatorGroup(
-    new SxVMSiteTestQuestion[] { Model },
-    new SxExtantions.SxIndicatorGroupSettings<SxVMSiteTestQuestion>
+    using (Ajax.BeginForm("Step", "SiteTests", new AjaxOptions { HttpMethod = "post", UpdateTargetId = "st-page" }))
     {
-        FuncGetLabel = x => x.Text,
-        FuncGetId = x => x.Id.ToString()
-    })
+        <p>
+            @Html.Raw(Model.Question.Test.Description)
+        </p>
+
+        @Html.AntiForgeryToken()
+
+        <div class="q">
+            @for (int i = 0; i < oldSteps.Length; i++)
+            {
+                step = oldSteps[i];
+                <input type="hidden" name="[@i].QuestionId" value="@step.QuestionId" />
+                <input type="hidden" name="[@i].IsCorrect" data-q-id="@step.QuestionId" value="@step.IsCorrect.ToString().ToLower()" />
+                <input type="hidden" name="[@i].Order" value="@i" />
+            }
+        </div>
+
+        @Html.SxIndicatorGroup(
+            new SxVMSiteTestAnswer[] { Model },
+            new SxExtantions.SxIndicatorGroupSettings<SxVMSiteTestAnswer>
+            {
+                FuncGetLabel = x => x.Question.Text,
+                FuncGetId = x => x.Question.Id.ToString()
+            })
+    }
+}
+else
+{
+   <h2>@Model.Subject.Title</h2>
+   <p>
+       @Html.Raw(Model.Subject.Description)
+   </p>
+   <a class="btn btn-default" href="@Url.Action("Details", "SiteTests", new { titleUrl=Model.Question.Test.TitleUrl})">Пройти заново</a>
 }
