--- a/GE.WebAdmin/Views/Account/Login.cshtml
+++ b/GE.WebAdmin/Views/Account/Login.cshtml
@@ -24,17 +24,22 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="login-desc__item">
-                        Хорошая новость для всех команд по World of Warships, наконец, наступило то самое время Большого турнира! Турнир уже успел начаться сегодня, 20 июня, в 8 часов вечера по Московскому времени, и 1/16 финала уже можно наблюдать на стриме! А уже завтра, на канале организаторов турнира, под названием «Корабли TV» можно будет пронаблюдать записи всех боёв и трансляций, проводимых на данный момент! Так что если вы пропустили сегодняшние битвы, в которых участвовали сильнейшие команды, то всегда можете заглянуть на их канал!
+                        Система позволяет полность контролировать такие материалы сайта как статьи, новости и т.д. Гибкая и удобная система управления медиаконтентом дает возможность наполнять Ваши материалы необходимыми фото и видео. При расширяемости моделей материалов и контекста БД легко поддерживать несколько сайтов, управляемых одним движком. 
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="login-desc__item">
-                        Хорошая новость для всех команд по World of Warships, наконец, наступило то самое время Большого турнира! Турнир уже успел начаться сегодня, 20 июня, в 8 часов вечера по Московскому времени, и 1/16 финала уже можно наблюдать на стриме! А уже завтра, на канале организаторов турнира, под названием «Корабли TV» можно будет пронаблюдать записи всех боёв и трансляций, проводимых на данный момент! Так что если вы пропустили сегодняшние битвы, в которых участвовали сильнейшие команды, то всегда можете заглянуть на их канал!
+                        В систему уже интегрированы Bootstrap и jQuery. Библиотеки постоянно обновляются при каждой итерации разработки системы. Использование подобных библиотек призвано помочь при ручном написании статей сайтов, разработке дополнительных клиентских виджетов.
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="login-desc__item">
-                        Хорошая новость для всех команд по World of Warships, наконец, наступило то самое время Большого турнира! Турнир уже успел начаться сегодня, 20 июня, в 8 часов вечера по Московскому времени, и 1/16 финала уже можно наблюдать на стриме! А уже завтра, на канале организаторов турнира, под названием «Корабли TV» можно будет пронаблюдать записи всех боёв и трансляций, проводимых на данный момент! Так что если вы пропустили сегодняшние битвы, в которых участвовали сильнейшие команды, то всегда можете заглянуть на их канал!
+                        Главной особенностью системы является возможность управления несколькими сайтами из одной панели администратора. Приобретенная один раз, административная панель поможет контролировать несколько сайтов с помощью простого переключения контекста. Периодические обновления и поддержка обеспечивают непрерывный контроль над возможными ошибками.
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="login-desc__item">
+                        В систему, как и в управляемые системой саты, уже встроен удобный PictureResizer, поэтому Вам не придется заботиться о лишних килобайтах, загруженных на страницы, единственное, что нужно сделать - подобрать оптималбные высоту или ширину выводимых изображений.
                     </div>
                 </div>
             </div>
