--- a/GE.WebUI/Views/Aphorism/DisplayTemplates/VMAphorism.cshtml
+++ b/GE.WebUI/Views/Aphorism/DisplayTemplates/VMAphorism.cshtml
@@ -12,7 +12,7 @@
     <div class="aph-html">
         @if (Model.Author != null && Model.Author.PictureId.HasValue)
         {
-            <figure class="img-circle" style="background-image:url(@Url.Action("Picture", new { controller="Pictures", id=Model.Author.PictureId}))">
+            <figure class="img-circle" style="background-image:url(@Url.Action("Picture", "Pictures", new { id=Model.Author.PictureId}))">
 
             </figure>
         }
