--- a/GE.WebUI/Views/Articles/DisplayTemplates/Article.cshtml
+++ b/GE.WebUI/Views/Articles/DisplayTemplates/Article.cshtml
@@ -15,7 +15,7 @@
 <figure class="mat-f-p">
     @if (picureId.HasValue)
     {
-        <img alt="@Model.Title" src="@Url.Action("Picture", new { controller="Pictures", id=picureId, width= 300}))" />
+        <img alt="@Model.Title" src="@Url.Action("Picture", "Pictures", new { id=picureId, width= 300}))" />
     }
     else
     {
